Adding support for Lithuanian banks
